<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewPasswordCreatFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.71" />

            <TextView
                android:id="@+id/recoverPasswordHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/headerNewPasswordCreate"
                android:textSize="35dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <EditText
                android:id="@+id/newPasswordET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/newPasswordCheakET"
                app:layout_constraintEnd_toStartOf="@+id/guideline22"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@+id/guideline23"
                app:layout_constraintTop_toTopOf="@+id/guideline20" />

            <EditText
                android:id="@+id/newPasswordCheakET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/PasswordCheck"
                android:inputType="textPassword"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline19"
                app:layout_constraintEnd_toStartOf="@+id/guideline22"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@+id/guideline23"
                app:layout_constraintTop_toBottomOf="@+id/newPasswordET" />

            <Button
                android:id="@+id/saveNewPasswordButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="войти"
                android:textSize="30dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorGreenPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline22"
                app:layout_constraintStart_toStartOf="@+id/guideline23"
                app:layout_constraintTop_toTopOf="@+id/guideline19" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>