<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraText">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/EmailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:textSize="18sp"
                android:hint="@string/EmailOrPhone"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toStartOf="@+id/guideline25"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toBottomOf="@+id/PasswordCheakET" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:textSize="18sp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/PasswordET"
                app:layout_constraintEnd_toStartOf="@+id/guideline25"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/registrationHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Регистрация"
                android:textColor="@color/colorGrey"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/addPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorGreenPrimary"
                android:padding="16dp"
                android:text="Зарегестрироваться"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline25"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.505" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

            <EditText
                android:id="@+id/PasswordET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:textSize="18sp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/PasswordCheakET"
                app:layout_constraintEnd_toStartOf="@+id/guideline25"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toBottomOf="@+id/nameET" />

            <EditText
                android:id="@+id/PasswordCheakET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:textSize="18sp"
                android:hint="@string/PasswordCheck"
                android:inputType="textPassword"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/EmailET"
                app:layout_constraintEnd_toStartOf="@+id/guideline25"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toBottomOf="@+id/PasswordET" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <ImageView
                android:id="@+id/addPhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline25"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:srcCompat="@drawable/ic_person_add_black_green_24dp"
                tools:ignore="VectorDrawableCompat" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/bottom_sheet_loyaut"
            android:id="@+id/bottomSheetLoyaut"/>/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>